--- a/weather-app/src/components/Cards.module.css
+++ b/weather-app/src/components/Cards.module.css
@@ -48,6 +48,11 @@
   top:-740px;
   left: 720px;
   width: 50%;
+  height: 0;
+}
+.nothing{
+  height: 0;
+  margin: 0;
 }
 
 @media screen and (max-width: 700px){
@@ -61,7 +66,7 @@
   }
   .left{
 
-    top: -595px;
+    top: -645px;
     right:4px;
 
   }
@@ -71,5 +76,9 @@
   .textdata{
     top:-740px;
     left: 129px;
+  }
+  .nothing{
+    height: 0;
+    margin: 0;
   }
 }
